--- a/appspec.yml
+++ b/appspec.yml
@@ -2,9 +2,11 @@ version: 0.0
 os: linux
 
 files:
-  - source: /index.jsp
-    destination: /home/ec2-user/tomcat/webapps/
-    
+  - source: /test.jsp
+    destination: /root/tomcat/webapps/ROOT
+
+file_exists_behavior: OVERWRITE    
+
 hooks:
   AfterInstall:
     - location: server_start.sh
