--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 
 files:
-  - source: /test.jsp
+  - source: /dbtest.jsp
     destination: /root/tomcat/webapps/ROOT
 
 file_exists_behavior: OVERWRITE    
